# scilex

./: .clang-tidy  .clang-tidy-misra  .gitignore  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  MANIFEST.in  MISRA.md  Makefile  README.md  SECURITY.md  pyproject.toml  setup.py  uncrustify.cfg
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: bench.py  bench_compare.py  bench_lex.cpp  bench_lex.py
cli/: scilex.cpp
cmake/: scilexConfig.cmake.in
cmake/smoke/: CMakeLists.txt  main.cpp
docs/: comparison.dox  coverage-style.css  coverage.dox  design.dox  spec.dox
examples/: cpp.hpp  css.hpp  fstring.hpp  json.hpp  lisp.hpp  math.hpp  python.hpp  sample.lex  sql.hpp  tokens.cpp  unicode_ident.lex  xml.hpp  yaml.hpp
fuzz/: exhaustive_lex.cpp  fuzz_lexer.cpp  oracle_check.cpp  reference.hpp
include/scilex/: layout.hpp  lexer.hpp  scilex.hpp  token.hpp
python/scilex/: __init__.py  __init__.pyi
python/src/: .clang-tidy  _scilex.cpp
python/tests/: _realpin.py  test_binding_perf.py  test_dfa_modes.py  test_scilex.py
tests/: framework.hpp  main.cpp  test_columns.cpp  test_dfa_modes.cpp  test_dispatch.cpp  test_eof.cpp  test_error_recovery.cpp  test_iterate.cpp  test_layout.cpp  test_lexer.cpp  test_modes.cpp  test_real_ascii_separators_regression.cpp  test_smoke.cpp  test_spec.cpp  test_unicode_identifiers.cpp
